--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
@@ -12,11 +12,18 @@
     <title>Document</title>
 </head>
 <body>
+     
+        <span class="icon-container">
+            <svg class="icon icon--primary">
+                <use xlink:href="images/sprite.svg#wordpress"></use>
+              </svg>
+        </span>
+       
     <h1>Heading</h1>
     <h2>Heading</h2>
     <h3>Heading</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eveniet reiciendis architecto, cumque quis qui iste quo doloribus alias suscipit.</p>
    <a href="#" class="link-arrow">Learn more</a>
- 
+ <span class="badge badge--primary">10% off !</span>
 </body>
 </html>
