--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -12,7 +13,10 @@
     <title>Document</title>
 </head>
 <body>
-     
+     <div class="search"><p class="ex ex-primary">Type here</p> 
+    <div class="buts"><a href="#">Search</a></div>
+    
+    </div>
         <span class="icon-container">
             <svg class="icon icon--primary">
                 <use xlink:href="images/sprite.svg#wordpress"></use>
